Adding Extra Task 1: Call to External URL - Adjusting and Adding Units Test | Adding RestTemplateConfig and restTemplate usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.h2.console.enabled=true
 logging.level.fabio.sicredi.evaluation=TRACE
+external.cpf.url=https://user-info.herokuapp.com/users/%d
